--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -3921,3 +3921,8 @@ Author:
   
   .header-top_address a {
       color: #d8d8d8; }
+
+.card-img-top {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
+}
